# hoda

./: .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  hoda.kdev4  hwa.kdev4  pyproject.toml  renovate.json
.github/workflows/: codeql.yml
.woodpecker/: build-docs.yml  build.yml  test.yml
docs/: Makefile  requirements.txt
docs/locale/ja/LC_MESSAGES/: hoda.po
docs/locale/zh_HK/LC_MESSAGES/: hoda.po
docs/locale/zh_TW/LC_MESSAGES/: hoda.po
docs/source/: conf.py  faq.rst  index.rst  reference.rst
docs/source/_static/: security.txt
docs/source/api/: datamodel.rst  datatype.rst  earthquake.rst  inputs.rst  menu.rst  od.rst  plumbing.rst  weather.rst
docs/source/api/plumbing/: constants.rst  index.rst  internal.rst  weather.rst
docs/source/examples/: index.rst  inputs.rst
docs/source/guides/: index.rst
docs/source/locale/ja/LC_MESSAGES/: faq.po  index.po  reference.po
docs/source/locale/ja/LC_MESSAGES/api/: datamodel.po  datatype.po  plumbing.po
docs/source/locale/zh_HK/LC_MESSAGES/examples/: index.po
hoda/: __init__.py  constants.py
hoda/plumbing/: __init__.py  http.py  weather.py
hwa/: __init__.py  earthquake.py  od.py  weather.py
hwa/models/: __init__.py  flw.py
hwa/types/: __init__.py  params.py  payloads.py
tests/: app.py  conftest.py  server.py  test_test.py
tests/examples/: format.py  sample_flw_real.json  sample_flw_real_2.json  sample_fnd_real.json  sample_warnsum_real.json  sample_warnsum_real_2.json
