[tool.poetry]
name = "hwa"
version = "0.1.0"
description = ""
authors = ["Sophie Cheung <me@kcomain.dev>"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kcomain/hwa/issues"

[tool.poetry.dependencies]
python = ">=3.8,<4"
requests = "^2.26.0"
aiohttp = {extras = ["speedups"], version = "^3.7.4", optional = true}
smopy = {version = "^0.0.7", optional = true}

[tool.poetry.dev-dependencies]
Sphinx = "^4.2.0"
sphinx-copybutton = "^0.4.0"
furo = "^2021.10.9"
sphinx-autobuild = "^2021.3.14"
mypy = "^0.910"

types-requests = {version = "~2.25.11"}
pytest = {version = "^6.2.5"}
pytest-xprocess = {version = "^0.18.1"}
Flask = {version = "^2.0.2"}
coverage = "^6.0.2"

[tool.poetry.extras]
map = ['smopy']
async = ['aiohttp']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
