[tool.poetry]
name = "hwa"
version = "0.1.0"
description = ""
authors = ["Sophie Cheung <me@soopy.moe>"]

[tool.poetry.urls]
"Bug Tracker" = "https://koakuma.soopy.moe/sophie/hwa/issues"

[tool.poetry.dependencies]
python = ">=3.8,<4"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
smopy = {version = "^0.0.7", optional = true}

[tool.poetry.dev-dependencies]
# docs
Sphinx = "^4.2.0"
sphinx-copybutton = "^0.4.0"
sphinx-autobuild = "^2021.3.14"

mypy = "^0.910"

pytest = {version = "^6.2.5"}
Flask = {version = "^2.0.2"}
coverage = "^6.0.2"
sphinx-book-theme = "^0.3.3"

[tool.poetry.extras]
map = ['smopy']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
