[tool.poetry]
name = "hoda"
version = "0.1.0"
description = "Wrapper of the HKO OpenData API"
authors = ["Mizuki <me@soopy.moe>"]
homepage = "https://patchy.soopy.moe/mizuki/hoda"

[tool.poetry.urls]
"Bug Tracker" = "https://patchy.soopy.moe/mizuki/hoda/issues"

[tool.poetry.dependencies]
python = ">=3.11,<4"
aiohttp = {version = "^3.7.4"}
smopy = {version = "^0.0.8", optional = true}
aiodns = {version = ">= 1.1", optional = true}
Brotli = {version = "^1.0.9", optional = true}
cchardet = {version = "^2.1.7", optional = true}
ujson = {version = "^5.4.0", optional = true}

[tool.poetry.dev-dependencies]
# docs
Sphinx = "^6.0.0"
sphinx-copybutton = "^0.5.0"
sphinx-autobuild = "^2021.3.14"
furo = "^2022.9.29"
sphinx-intl = "^2.0.1"
sphinxext-opengraph = "^0.8.0"

mypy = "^0.991"
pytest = "^7.2.0"
coverage = "^7.0.0"
pytest-asyncio = "^0.20.0"
black = "^23.0.0"
ipython = "^8.6.0"

[tool.poetry.extras]
map = ['smopy']
speedups = ['aiodns', 'Brotli', 'cchardet', 'ujson']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
